<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_id" />
        <TextView
            android:id="@+id/network_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_name" />
        <TextView
            android:id="@+id/network_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/servicemode_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <Button
                android:id="@+id/button_show_rrc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_rrc_state" />
            <Button
                android:id="@+id/button_show_sysdump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_sysdump_tool" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fd_prefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_fd_pref"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <CheckBox
                android:id="@+id/enable_fd_pref_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_fd" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fd_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_fd_policy"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:id="@+id/has_dormpolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <CheckBox
                android:id="@+id/enable_fd_policy_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/enable_fd_policy" />
            <TextView
                android:id="@+id/fd_policy_timer_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <SeekBar
                android:id="@+id/fd_policy_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:id="@+id/button_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply" />
    </LinearLayout>
</ScrollView>